--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
     <div class="wrapper">
       <div class="header"><h1>Linguistik</h1></div>
       <div class="question">
-        <div class="image"><img src="" alt="Karte" /></div>
-        <p id="question"></p>
+        <div class="image"><img alt="Karte" /></div>
+        <div class="card">
+          <div class="front">
+            <p id="question"></p>
+          </div>
+          <div class="back">
+            <p class="answerSystem"></p>
+          </div>
+        </div>
       </div>
       <div class="answerUser">
         <input type="text" autofocus />
         <h3 class="myButton">❓</h3>
-      </div>
-      <div class="answerPlaceholder">
-        <p class="answerSystem"></p>
       </div>
       <h4>Swipe für eine neue Frage</h4>
     </div>
