Changed Question font-size and enabled autofocus on input

--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="de">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" type="module"></script>
+    <title>Noits</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js" type="module"></script>
-  <title>Noits</title>
-  <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
-</head>
-
-<body>
-  <div class="wrapper">
-    <div class="header">
-      <h1>Linguistik</h1>
-    </div>
-    <div class="question">
-      <div class="image"><img alt="Karte" /></div>
-      <div class="card">
-        <div class="front">
-          <p id="question"></p>
-        </div>
-        <div class="back">
-          <p class="answerSystem"></p>
+  <body>
+    <div class="wrapper">
+      <div class="header">
+        <h1>Linguistik</h1>
+      </div>
+      <div class="question">
+        <div class="image"><img alt="Karte" /></div>
+        <div class="card">
+          <div class="front">
+            <p id="question"></p>
+          </div>
+          <div class="back">
+            <p class="answerSystem"></p>
+          </div>
         </div>
       </div>
+      <div class="answerUser">
+        <input type="text" autofocus />
+        <h3 class="myButton">❓</h3>
+      </div>
+      <h4>Swipe für eine neue Frage</h4>
     </div>
-    <div class="answerUser">
-      <input type="text" />
-      <h3 class="myButton">❓</h3>
-    </div>
-    <h4>Swipe für eine neue Frage</h4>
-  </div>
-</body>
-
+  </body>
 </html>
